First variant of jdk21 support